[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/cards.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.247059, 0.00392157, 0.00392157, 1 )

[node name="Main" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="CardName" type="Label" parent="."]
margin_left = 471.0
margin_top = 315.0
margin_right = 582.0
margin_bottom = 353.0
text = "Label"

[node name="NextButton" type="Button" parent="."]
margin_left = 525.0
margin_top = 345.0
margin_right = 537.0
margin_bottom = 365.0
text = "Next"

[node name="PrevButton" type="Button" parent="."]
margin_left = 471.0
margin_top = 345.0
margin_right = 513.0
margin_bottom = 365.0
text = "Prev"

[connection signal="button_up" from="NextButton" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="PrevButton" to="." method="_on_PrevButton_button_up"]
